# Konstruo

./: .editorconfig  .gitignore  BUILD.md  Cargo.toml  README.md  Surveyor-linux-x64-v0.6.1-alpha.3  release-notes.md
.github/workflows/: ci-cd.yml
app/: Cargo.toml
app/src/: main.rs
beach_app/: Cargo.toml
beach_app/src/: main.rs
beach_civil/: Cargo.toml
beach_civil/src/ways/: control.rs  control_line.rs  controls.rs  edges.rs  line.rs  materials.rs  mesh_2d.rs  meshes.rs  mod.rs  plugin.rs  surface.rs  way.rs
beach_core/: Cargo.toml
beach_core/src/: constants.rs  lib.rs
beach_core/src/beziers/: cubic_bezier_spline.rs  flatten.rs  from_kurbo.rs  internal_kurbo.rs  mod.rs  offset.rs  stroke.rs  to_bevy.rs  to_kurbo.rs
beach_core/src/constraints/: clamp_float.rs
beach_core/src/conversion/: to_2d.rs  to_3d.rs
beach_core/src/geometry/: lines.rs  meshes.rs  mod.rs  orientation.rs  polygons.rs  triangles.rs  vectors.rs
beach_core/src/kinematics/: translation.rs
beach_core/src/mathematics/: constants.rs  floats.rs  mod.rs  spherical_coordinate_system.rs
beach_core/src/movement/: direct.rs  mod.rs  target_based_movement.rs
beach_geography/: Cargo.toml
beach_geography/src/: ground.rs  lib.rs  sky.rs  sun.rs
beach_ui/: Cargo.toml
beach_ui/src/: lib.rs
beach_ui/src/axis_marker/: axis_marker.rs  materials.rs  meshes.rs  mod.rs  plugin.rs
beach_ui/src/cameras/: mod.rs  orbit.rs  orbit_input.rs  orbit_update.rs  pan.rs  pan_input.rs  pan_update.rs
beach_ui/src/cursor/: gizmo.rs
beach_ui/src/debug/: mod.rs  visibility.rs  world.rs
beach_ui/src/gizmos/: grid.rs
beach_ui/src/grid/: component.rs  materials.rs  mod.rs  plugin.rs
beach_ui/src/pan_orbit/: mod.rs  orbit.rs  orbit_input.rs  orbit_update.rs  pan.rs  pan_input.rs  pan_update.rs  plugin.rs
beach_ui/src/tools/: axis_gizmo.rs  cursor.rs  gizmos.rs  grid.rs  mod.rs
beach_ui/src/view_cube/: camera.rs  corner.rs  edge.rs  face.rs  materials.rs  meshes.rs  mod.rs  orthographic_camera.rs  perspective_camera.rs  plugin.rs  side.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/beziers/: cubic_bezier.rs  cubic_bezier_spline.rs  from_kurbo.rs  to_kurbo.rs
core/src/constraints/: clamp_float.rs  clamp_vec3.rs
core/src/conversion/: to_2d.rs  to_3d.rs
core/src/geometry/: meshes.rs  orientation.rs  polygons.rs  primitives.rs  vectors.rs
core/src/kinematics/: translation.rs
core/src/mathematics/: constants.rs  floats.rs  spherical_coordinate_system.rs
crates/architecture/: Cargo.toml
crates/architecture/src/: lib.rs
crates/architecture/src/modular/: building.rs  factory.rs  meshes.rs  mod.rs  module.rs  plugin.rs  stack.rs  templates.rs
crates/architecture/src/topology/: mod.rs  opening.rs  pitch.rs
crates/beziers/: Cargo.toml
crates/beziers/src/: constants.rs  cubic_bezier.rs  cubic_bezier_spline.rs  from_kurbo.rs  lib.rs  sweep.rs  to_bevy.rs  to_kurbo.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/distribution/: Cargo.toml
crates/distribution/src/: distributable.rs  distributed.rs  distribution.rs  lib.rs  plugin.rs  taffy_flex_factory.rs
crates/environment/: Cargo.toml
crates/environment/src/: ground.rs  sky.rs  sun.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: control.rs  control_line.rs  events.rs  intersection.rs  intersection_builder.rs  lib.rs  materials.rs  meshes.rs  path.rs  plugin.rs  surface.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  observer_marker.rs
crates/ux/: Cargo.toml
crates/ux/src/: lib.rs  plugin.rs
crates/ux/src/interaction/: drawing.rs  mod.rs  plugin.rs  selection.rs
crates/ux/src/interface/: action.rs  bar.rs  button.rs  interceptor.rs  mod.rs  plugin.rs  state.rs
crates/ux/src/modes/: mod.rs
crates/ux/src/modes/draw/: actions.rs  mod.rs  resource.rs  systems.rs
crates/ux/src/modes/selection/: actions.rs  entity.rs  enum.rs  mod.rs
environment/: Cargo.toml
environment/src/: ground.rs  lib.rs  sky.rs  sun.rs
infrastructure/: Cargo.toml
infrastructure/src/ways/: control.rs  control_line.rs  mod.rs  plugin.rs  surface.rs  way.rs
src/: lib.rs  main.rs
src/architecture/: mod.rs
src/architecture/buildings/: materials.rs  meshes.rs  mod.rs  modular_factory.rs  module.rs  plot.rs  plugin.rs  roof_style.rs  stack.rs  templates.rs
src/architecture/modular/: building.rs  materials.rs  meshes.rs  mod.rs  module.rs  plugin.rs  (+2 more)
src/core/: constants.rs  helpers.rs  mod.rs
src/environment/: ground.rs  sky.rs  sun.rs
src/examples/: axis_marker_example.rs  bezier_distribution_example.rs  buildings_example.rs  distribution_example.rs  factory.rs  flex_along_bezier_example.rs  flex_buildings_along_path.rs  flex_buildings_along_way.rs  flex_nested_example.rs  flex_vertically_example.rs  flex_wrapping_example.rs  helpers.rs  intersection_example.rs  materials.rs  mod.rs  path_example.rs  shapes_3d_examples.rs  subdivision_example.rs  way_example.rs
src/infrastructure/: mod.rs
src/ui/: constants.rs  mod.rs
ui/: Cargo.toml
web/: index.html  style.css
(+240 files in other folders)
