[package]
name = "geometrician"
version = "0.0.0"
edition = "2021"

[dependencies]
geometrician_infrastructure = { path = "../infrastructure" }
geometrician_core = { path = "../core" }
geometrician_environment = { path = "../environment" }
geometrician_ui = { path = "../ui" }
bevy = { workspace = true, features = ["dynamic_linking"] }

[lints]
workspace = true