[package]
name = "konstruo_architecture"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.16.0-rc.3"
konstruo_core = { path = "../core" }
konstruo_distribution = { path = "../distribution" }
konstruo_geometry = { path = "../geometry" }
konstruo_ui = { path = "../ui" }

[lints]
workspace = true
