[package]
name = "konstruo_paths"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.16.0-rc.3"
konstruo_beziers = { path = "../beziers" }
konstruo_core = { path = "../core" }
konstruo_distribution = { path = "../distribution" }
konstruo_geometry = { path = "../geometry" }
konstruo_ui = { path = "../ui" }
