[package]
name = "konstruo_paths"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
konstruo_beziers = { workspace = true }
konstruo_core = { workspace = true }
konstruo_distribution = { workspace = true }
konstruo_geometry = { workspace = true }
konstruo_ui = { workspace = true }

[lints]
workspace = true
