[package]
name = "konstruo_ux"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.16.0-rc.3"
konstruo_architecture = { path = "../architecture" }
konstruo_beziers = { path = "../beziers" }
konstruo_core = { path = "../core" }
konstruo_geometry = { path = "../geometry" }
konstruo_paths = { path = "../paths" }
konstruo_ui = { path = "../ui" }
