[package]
name = "konstruo_ux"
version = { workspace = true }
edition = "2021"

[dependencies]
bevy = { workspace = true }
konstruo_architecture = { path = "../architecture" }
konstruo_beziers = { path = "../beziers" }
konstruo_core = { path = "../core" }
konstruo_geometry = { path = "../geometry" }
konstruo_paths = { path = "../paths" }
konstruo_ui = { path = "../ui" }

[lints]
workspace = true
